Supermarketmanagementproject/src/main/java/com/example/demo/error/Validationerrorresponse.java
package com.example.demo.error;

import java.util.ArrayList;
import java.util.List;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data

public class Validationerrorresponse {

	private List<String>list =new ArrayList<String>();
}
